Crash in klassItable::initialize_itable_for_interface when running SelectionResolution InvokeInterfaceICCE.java

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b79
    • generic
    • generic

        In product mode only, InvokeInterfaceICCE.java crashs in klassItable. This is related to, but not caused by 8067480. Additional improvements like those are needed.

        Test case:
        interface I1 has abstract m
        interface I0 extends I1 private m{}
        class C2 implements I0 private m{}

        Caller: I0: invokeinterace I0.m C2 objectref
        expect: resolution finds I0.m private, throws IncompatibleClassChangeError since you need
        to call invokespecial to invoke a private method in an interface.

        Fastdebug you get the correct behavior.
        In product, we get a SEGV.

              Assignee:
              Karen Kinnear (Inactive)
              Reporter:
              Karen Kinnear (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: