8087342: Crash in klassItable::initialize_itable_for_interface Summary: Fix method searches to handle static, private instance and overpass Reviewed-by: acorn